--- a/pylint_odoo/test_repo/test_module/i18n/fr.po
+++ b/pylint_odoo/test_repo/test_module/i18n/fr.po
@@ -13,11 +13,77 @@ msgstr ""
 
 #. module: test_module
 #: model:ir.model.fields,field_description:test_module.field_description
+#, python-format
 msgid "Branch"
 msgstr "Branche"
 
 #. module: test_module
 #: model:ir.model.fields,field_description2:test_module.field_description2
 #: model:ir.model.fields,field_description2:test_module.field_description2
-msgid "Correct variables %s {}"
-msgstr "Correct variables %s {}"
+#, python-format
+msgid "Correct variables %s"
+msgstr "Correct variables %s"
+
+#. module: test_module
+#: model:ir.model.fields,field_description5:test_module.field_description5
+#: model:ir.model.fields,field_description5:test_module.field_description5
+#, python-format
+msgid "Correct variables %(variable)s"
+msgstr "Correct variables %(variable)s"
+
+#. module: test_module
+#: model:ir.model.fields,field_description3:test_module.field_description3
+#: model:ir.model.fields,field_description3:test_module.field_description3
+#, python-format
+msgid "Correct variables {}"
+msgstr "Correct variables {}"
+
+#. module: test_module
+#: model:ir.model.fields,field_description4:test_module.field_description4
+#: model:ir.model.fields,field_description4:test_module.field_description4
+#, python-format
+msgid "Correct variables {variable}"
+msgstr "Correct variables {variable}"
+
+#. module: test_module
+#: code:test_module/__init__.py:0
+#, python-format
+msgid ""
+"Multi line valid message!\n"
+"{message: %s,\n"
+"error code: %s,\n"
+"error type: %s,\n"
+"request id: %s}"
+msgstr ""
+"Multi line valid message!\n"
+"{message2: %s,\n"
+"error code2: %s,\n"
+"error type2: %s,\n"
+"request id2: %s}"
+
+#. module: test_module
+#: code:test_module/__init__.py:0
+#, python-format
+msgid ""
+"Multi line valid message!\n"
+"{message: %s,\n"
+msgstr ""
+"Multi line valid message!\n"
+"{message2: %s,\n"
+
+
+#. module: test_module
+#: code:test_module/__init__.py:2
+#, python-format
+msgid ""
+"it must be a literal python dictionary definition e.g. "
+"\"{'field': 'value'}\""
+msgstr ""
+"it must be a literal python dictionary definition e.g. "
+"\"{'field_translated': 'value_translated'}\""
+
+#. module: test_module
+#: code:addons/test_module/__init__.py:8
+#, python-format
+msgid "%s%% discount"
+msgstr "%s%%discount without space"
